[metadata]
### You might notice that we used a dash in our top level folder, 
### and an underscore in the inner folder. 
### This is the Python convention: distribution packages use dashes, 
### while Python files and modules use underscores. 
name = napari-stereoTis
version = 0.0.1
classifiers =
    Framework :: napari

[options]
packages = find:
include_package_data = True
install_requires =
    napari
    numpy
    scikit-image
    opencv-python
    pandas
    matplotlib

[options.entry_points]
napari.manifest =
    napari-stereoTis = napari_stereoTis:napari.yaml