[metadata]
### You might notice that we used a dash in our top level folder, 
### and an underscore in the inner folder. 
### This is the Python convention: distribution packages use dashes, 
### while Python files and modules use underscores. 
name = napari-stereoTis
version = 0.0.1
description = A napari plugin to mask cells or tissues for spatial transcriptomes
long_description = file: README.md
long_description_content_type = text/markdown
author = Qi Fang
author_email = fangqi@genomics.cn
license = Apache License 2.0
license_files = LICENSE
classifiers =
    Framework :: napari
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    
[options]
packages = find:
include_package_data = True
python_requires = >=3.8
install_requires =
    napari
    numpy
    scikit-image
    opencv-python
    pandas
    matplotlib

[options.entry_points]
napari.manifest =
    napari-stereoTis = napari_stereoTis:napari.yaml